tests/machine/x/c/record_assign.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/record_assign.c:12:3: error: unknown type name ‘counter_t’
   12 |   counter_t *data;
      |   ^~~~~~~~~
/workspace/mochi/tests/machine/x/c/record_assign.c: In function ‘create_counter_list’:
/workspace/mochi/tests/machine/x/c/record_assign.c:17:31: error: ‘counter_t’ undeclared (first use in this function); did you mean ‘Counter’?
   17 |   l.data = calloc(len, sizeof(counter_t));
      |                               ^~~~~~~~~
      |                               Counter
/workspace/mochi/tests/machine/x/c/record_assign.c:17:31: note: each undeclared identifier is reported only once for each function it appears in
/workspace/mochi/tests/machine/x/c/record_assign.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/record_assign.c:28:3: error: unknown type name ‘counter_t’; did you mean ‘Counter’?
   28 |   counter_t c = (Counter){.n = 0};
      |   ^~~~~~~~~
      |   Counter
/workspace/mochi/tests/machine/x/c/record_assign.c:28:17: error: incompatible types when initializing type ‘int’ using type ‘Counter’ {aka ‘struct Counter’}
   28 |   counter_t c = (Counter){.n = 0};
      |                 ^
/workspace/mochi/tests/machine/x/c/record_assign.c:29:7: warning: passing argument 1 of ‘inc’ from incompatible pointer type [-Wincompatible-pointer-types]
   29 |   inc(&c);
      |       ^~
      |       |
      |       int *
/workspace/mochi/tests/machine/x/c/record_assign.c:25:18: note: expected ‘Counter *’ {aka ‘struct Counter *’} but argument is of type ‘int *’
   25 | int inc(Counter *c) { c->n = c->n + 1; }
      |         ~~~~~~~~~^
/workspace/mochi/tests/machine/x/c/record_assign.c:30:19: error: request for member ‘n’ in something not a structure or union
   30 |   printf("%d\n", c.n);
      |                   ^

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:53Z
