tests/machine/x/c/record_assign.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T02:49:32Z
#include <stdio.h>
#include <stdlib.h>

typedef struct Counter Counter;

typedef struct Counter {
  int n;
} Counter;
typedef struct {
  int len;
  counter_t *data;
} counter_list_t;
static counter_list_t create_counter_list(int len) {
  counter_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(counter_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int inc(Counter *c) { c->n = c->n + 1; }

int main() {
  counter_t c = (Counter){.n = 0};
  inc(&c);
  {
    int first = 1;
    if (!first)
      printf(" ");
    printf("%d", c.n);
    first = 0;
    printf("\n");
  }
  return 0;
}
